z-index and icon fix

--- a/client/src/sass/layout/_nav.scss
+++ b/client/src/sass/layout/_nav.scss
@@ -1,6 +1,7 @@
 @use "../helpers/variables" as var;
 
 .navbar {
+  z-index: 999;
   display: flex;
   width: 100%;
   padding: 1rem 1rem;
